plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'agh.project'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'io.r2dbc:r2dbc-postgresql:0.8.12.RELEASE'
	implementation 'net.coobird:thumbnailator:0.4.14'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

// Narzędzia pomocnicze
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

// Zależności testowe
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.3'

// Zależności pomocnicze dla typów obrazów
	implementation 'com.twelvemonkeys.imageio:imageio-core:3.6.1'
	implementation 'org.apache.commons:commons-imaging:1.0-alpha3'
}

tasks.named('test') {
	useJUnitPlatform()
}
